Fixed horizontal scrollbar

--- a/css/custom.css
+++ b/css/custom.css
@@ -18,6 +18,7 @@
 /*Custom scrollbar*/
 	::-webkit-scrollbar {
 		width: 5px;
+		height: 5px;
 	}
 
 	::-webkit-scrollbar-thumb {
@@ -26,6 +27,10 @@
 
 	::-webkit-scrollbar-thumb:hover {
 		background: #004a9c;
+	}
+
+	::-webkit-scrollbar-corner {
+		background: #00000000;
 	}
 
 	:root {
